Add Utils.Net.Sample application.

--- a/Utils.Net/TODO.txt
+++ b/Utils.Net/TODO.txt
@@ -28,3 +28,8 @@ https://social.msdn.microsoft.com/Forums/vstudio/en-US/93bf5bd2-e471-4414-af4c-1
 9. CircularProgressBar
 
 10. Maybe add colors resource if
+
+
+-- Sample --
+0. Add navigation bar
+1. Use AutoFac (add interfaces to library)
