Utils.Net * Add default Height and rename Increment to Step in the NumericBox * Add some padding to TextBox in SimpleInputDialog * Add MergedDictionary file with all styles

--- a/Utils.Net/TODO.txt
+++ b/Utils.Net/TODO.txt
@@ -29,7 +29,7 @@ https://social.msdn.microsoft.com/Forums/vstudio/en-US/93bf5bd2-e471-4414-af4c-1
 8. Custom combobox
 9. CircularProgressBar
 
-10. Maybe add colors resource if
+10. Maybe add colors resource used in different styles / ThemeManager?
 
 -- Test --
 
