Utils.Net * Fix some bugs detected from unit tests. * Update wiki

--- a/Utils.Net/TODO.txt
+++ b/Utils.Net/TODO.txt
@@ -1,9 +1,6 @@
 ﻿StyleCop, AxoCover
 
-* public the library in github (add wiki and examples, license) and make nuget package in nuget.org; split library in smaller ones - WPF, Core, etc.
-.\MarkdownGenerator.exe Utils.Net\bin\Release\Utils.Net.dll Utils.Net.wiki
-.\nuget.exe pack .\Utils.Net\ -properties Configuration=Release -symbols
-.\nuget.exe push .\MyUtils.Net.0.1.6709.28627.nupkg <API_KEY> -Source https://api.nuget.org/v3/index.json
+* Write better github Readme; Better examples; Split library in smaller ones - WPF, Core, etc.
 
 * Validation Rules - https://docs.microsoft.com/en-us/dotnet/framework/wpf/app-development/dialog-boxes-overview (Validating User-Provided Data)
 
@@ -12,8 +9,6 @@ https://msdn.microsoft.com/en-us/library/microsoft.win32.openfiledialog(v=vs.110
 https://msdn.microsoft.com/en-us/library/system.windows.forms.folderbrowserdialog%28v=vs.110%29.aspx?f=255&MSPPError=-2147217396
 
 * Settings Dialog - based on attributes
-
-* UI Automation testing - https://github.com/TestStack/White based on Microsoft UI Automation
 
 * RelativeFontSizeHelper
 https://social.msdn.microsoft.com/Forums/vstudio/en-US/93bf5bd2-e471-4414-af4c-11576c348508/wpf-relative-font-size?forum=wpf
@@ -25,12 +20,12 @@ https://social.msdn.microsoft.com/Forums/vstudio/en-US/93bf5bd2-e471-4414-af4c-1
 
 * Maybe add colors resource used in different styles / ThemeManager?
 
-* Write "deploy script" which should build, generate wiki, push to git and nuget
-
 * May be add WaitFor function in UITester to some helper
 
 -- Test --
 No UI Code Coverage 40.59% / 43.07%
+Some UI Code Coverage 56.01% / 59.38%
+With UI Code Coverage 76.35% / 80.14%
 
 
 -- Sample --
