--- a/Utils.Net/TODO.txt
+++ b/Utils.Net/TODO.txt
@@ -23,12 +23,13 @@ https://github.com/DotNetAnalyzers
 https://marketplace.visualstudio.com/items?itemName=SteveCadwallader.CodeMaid
 https://marketplace.visualstudio.com/items?itemName=NicoVermeir.XAMLStyler
 
-* Tutorial Builder - from UbiLibarary
+* Maybe add sample app images to be downloaded in the app
 
 
 -- Test -- 
-Code Coverage 85.58% / 89.11%
+Code Coverage 86.26% / 89.80%
 
 
 -- Sample --
 * More pages for other controls
+* Tutorial for the new items
